syntax = "proto3";

option go_package = "./pb";

package pb;

message RegisterUserReq {
    optional string  email = 1;
    optional string  phone = 2;
    string  password = 3;
    string  registerType = 4; // registerType: email(邮箱注册)，phone(手机号注册)
}

message RegisterUserResp {
    string message = 1;
}

service usercenter {
    // 注册用户
    rpc registerUser(RegisterUserReq)returns(RegisterUserResp);
}